--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
 html {
   background-color: #5cdb95;
 }
+
 /* Page header */
 .header {
   grid-column-start: span 4;
   position: relative;
   text-align: left;
   color: #05386b;
+  min-width: 376px;
 }
 h1 {
   font-family: 'Aldrich', sans-serif;
@@ -26,10 +28,11 @@ h1 {
 /* Main content area */
 .container {
   display: grid;
+  overflow: hidden;
   padding: 10px;
   margin-left: 0.75vw;
   margin-right: 0.75vw;
-  grid-template-rows:  110px 670px 40px;
+  grid-template-rows:  110px 700px 40px;
   grid-template-columns: repeat(4, 1fr);
 }
 
@@ -38,7 +41,7 @@ h1 {
   display: grid;
   grid-column-start: span 3;
   grid-row-start: 2 / 3;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-rows: repeat(9, 1fr);
   grid-template-columns: repeat(3, 1fr);
   grid-row-gap: 1em;
   padding-top: 10px;
@@ -50,7 +53,7 @@ h1 {
   grid-column-start: span 10;
   padding-right: 10px;
   grid-template-columns: minmax(150px, 300px) 2fr;
-  grid-template-rows: minmax(50px, 150px);
+  grid-template-rows: minmax(auto, 150px);
   grid-column-gap: 1em;
   margin-left: .75vw;
 }
@@ -71,6 +74,8 @@ h1 {
 font-family: 'Open Sans', sans-serif;
 font-weight: 400;
 grid-row-start: span 1;
+text-align: justify;
+text-justify: inter-word;
 }
 .description a {
   text-decoration: none;
@@ -96,7 +101,7 @@ grid-row-start: span 1;
 }
 h2 {
   font-family: 'Aldrich', sans-serif;
-  font-size: 1.75em;
+  font-size: 2.5vw;
   color: #05386b;
   padding-left: 15px;
   padding-top: 10px;
@@ -113,6 +118,9 @@ h2 {
   display: block;
   margin-right: auto;
   margin-left: auto;
+  height: 7vw;
+  min-width: 75px;
+  min-height: 75px;
 }
 
 /* Main page footer area */
@@ -126,63 +134,50 @@ h2 {
   text-align: center;
   border-top: .5px solid #919191;
   padding-top: 10px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 /* Responsive page sizes */
-@media screen and (max-height: 900px) {
-  
-}
-/* Smaller than 995 */
-@media screen and (max-width: 995px) {
-  .header{
-    font-size: .75em;
-    max-height: 90px;
-    margin-bottom: 0;
-  }
-  .box-left {
-    margin-top: -20px;
+@media screen and (max-width: 992px) {
+  .followers-container{
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: 1fr;
+    /* margin-top: 4vw; */
+    grid-gap: 20px;
   }
   .box-right {
-    margin-top: -20px;
+    overflow: auto;
+  }
+}
+
+@media screen and (max-width: 973px) {
+  h1{
+    font-size: 3em;
   }
   #ultimate {
-    white-space: nowrap;
+    font-size: 0.6em;
+  }
+  .box-left{
+    margin-top: -20px;
+  }
+  .box-right{
+    margin-top: -20px;
+  } 
+  .description{
+    font-size: 0.9em;
   }
 }
 
-/* Smaller than 750*/
-@media screen and (max-width: 750px) {
-  .header{
-    font-size: .6em;
-    max-height: 75px;
+@media screen and (max-width: 850px) {
+  .box-left{
+    grid-template-columns: 1fr;
   }
-  .box-left {
-    margin-top: -35px;
-  }
-  .box-right {
-    margin-top: -35px;
-  }
- 
-}
-/* Smaller than 625*/
-@media screen and (max-width: 625px) {
-  h1{
-    font-size: 3.25em;
-    max-height: 100px;
-  }
-  .header {
-    max-height: 65px;
-  }
-}
-
-/* Smaller than 400*/
-@media screen and (max-width: 400px) {
-  h1{
-    font-size: 2.75em;
-    max-height: 100px;
-  }
-  .header {
-    max-height: 75px;
+  
+@media screen and (max-width: 581) {
+  .container{
+    grid-template-rows:  90px 700px 40px;
+    grid-row-start: 1;
+    grid-row-end: 2;
   }
 }
